# AI-News-Scraper

./: README.md  pyproject.toml
src/ai_news_scraper/: crew.py  main.py
src/ai_news_scraper/config/: agents.yaml  tasks.yaml
