[project]
name = "ai_news_scraper"
version = "0.1.0"
description = "AI-NEWS-SCRAPER using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.150.0,<1.0.0"
]

[project.scripts]
ai_news_scraper = "ai_news_scraper.main:run"
run_crew = "ai_news_scraper.main:run"
train = "ai_news_scraper.main:train"
replay = "ai_news_scraper.main:replay"
test = "ai_news_scraper.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
